<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".LaunchActivity">

        <LinearLayout
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="4dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enableDebug" />

            <CheckBox
                android:id="@+id/enableDebugCheckbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="4dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enableNameExtraction" />

            <CheckBox
                android:id="@+id/enableNameExtractionCheckbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="4dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enableExpiryExtraction" />

            <CheckBox
                android:id="@+id/enableExpiryExtractionCheckbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="4dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enableEnterCardManually" />

            <CheckBox
                android:id="@+id/enableEnterCardManuallyCheckbox"
                android:checked="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <Button
            android:id="@+id/scanCardButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="4dp"
            android:text="@string/scan_card" />

        <Button
            android:id="@+id/singleActivityDemo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="4dp"
            android:text="@string/single_activity_demo" />

        <TextView
            android:id="@+id/deviceArchitectureText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="4dp"
            android:text="@string/deviceArchitecture" />

    </LinearLayout>

</ScrollView>
